--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
         build: express-server
         ports:
             - "3000:3000"
+        links:
+            - database
 
     database:
         image: mongo
